<resources>
    <string name="app_name">Детская энциклопедия</string>
    <string name="loading">Загрузка…</string>
    <string name="error">Ошибка</string>
    <string name="success">Успешно</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="confirm">Подтвердить</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Введите текст для поиска</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">OK</string>
    <string name="send">Отправить</string>
    <string name="error_empty_field">Это поле обязательно для заполнения</string>
    <string name="nav_home">Главная</string>
    <string name="home">Главная</string>
    <string name="nav_categories">Категории</string>
    <string name="nav_bookmarks">Закладки</string>
    <string name="nav_quizzes">Викторины</string>
    <string name="nav_achievements">Достижения</string>
    <string name="nav_profile">Профиль</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_assistant">Помощник</string>
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="logout">Выйти</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="name">Имя</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="login_error">Ошибка входа. Проверьте email и пароль.</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="already_have_account">Уже есть аккаунт?</string>
    <string name="registration_success">Регистрация прошла успешно!</string>
    <string name="registration_error">Ошибка регистрации. Попробуйте еще раз.</string>
    <string name="error_field_required">Это поле обязательно</string>
    <string name="error_invalid_email">Неверный формат email</string>
    <string name="error_password_too_short">Пароль должен содержать минимум %d символов</string>
    <string name="password_mismatch">Пароли не совпадают</string>
    <string name="email_already_exists">Пользователь с таким email уже существует</string>
    <string name="categories">Категории</string>
    <string name="category_details">Подробно о категории</string>
    <string name="no_categories">Категории отсутствуют</string>
    <string name="add_category">Добавить категорию</string>
    <string name="category_name">Название категории</string>
    <string name="category_description">Описание категории</string>
    <string name="category_color">Цвет категории</string>
    <string name="category_icon">Иконка категории</string>
    <string name="entries_count">%1$d статей</string>
    <string name="explore_categories">Просмотреть категории</string>
    <string name="confirm_delete_category">Вы уверены, что хотите удалить категорию \"%1$s\"?</string>
    <string name="category_deleted">Категория \"%1$s\" успешно удалена</string>
    <string name="error_delete_category">Ошибка при удалении категории: %1$s</string>
    <string name="edit_category">Редактировать категорию</string>
    <string name="category_color_hex">Цвет категории (HEX, например, #RRGGBB)</string>
    <string name="category_icon_name">Название иконки (для drawable)</string>
    <string name="category_saved">Категория сохранена</string>
    <string name="error_saving_category">Ошибка сохранения категории: %1$s</string>
    <string name="invalid_color_hex">Неверный HEX код цвета</string>
    <string name="category_animals">Животные</string>
    <string name="category_plants">Растения</string>
    <string name="category_space">Космос</string>
    <string name="category_history">История</string>
    <string name="category_technology">Технологии</string>
    <string name="category_science">Наука</string>
    <string name="entries">Статьи</string>
    <string name="entry_details">Содержание статьи</string>
    <string name="no_entries">Статьи отсутствуют</string>
    <string name="add_entry">Добавить статью</string>
    <string name="edit_entry">Редактировать статью</string>
    <string name="entry_title">Заголовок статьи</string>
    <string name="entry_content">Содержание статьи</string>
    <string name="entry_summary">Краткое описание</string>
    <string name="entry_image">Изображение для статьи</string>
    <string name="entry_saved">Статья сохранена</string>
    <string name="mark_as_read">Отметить как прочитанное</string>
    <string name="mark_as_unread">Отметить как непрочитанное</string>
    <string name="entry_read">Прочитано</string>
    <string name="entry_unread">Не прочитано</string>
    <string name="confirm_delete">Подтверждение удаления</string>
    <string name="confirm_delete_entry">Вы уверены, что хотите удалить статью \"%1$s\"?</string>
    <string name="select_category">Выберите категорию</string>
    <string name="more_options">Дополнительные опции</string>
    <string name="field_required">Это поле обязательно для заполнения</string>
    <string name="quizzes">Викторины</string>
    <string name="no_quizzes">Нет доступных викторин</string>
    <string name="no_quizzes_found">Викторины не найдены</string>
    <string name="quiz_hint">Проверьте свои знания с помощью интересных викторин</string>
    <string name="quiz_details">Информация о викторине</string>
    <string name="quiz_icon">Иконка викторины</string>
    <string name="related_article">Связанная статья</string>
    <string name="related_entry">Связанная статья</string>
    <string name="no_related_article">Нет связанной статьи</string>
    <string name="view_article">Просмотреть статью</string>
    <string name="start_quiz">Начать викторину</string>
    <string name="next_question">Следующий вопрос</string>
    <string name="submit_answer">Ответить</string>
    <string name="question">Вопрос %1$d из %2$d</string>
    <string name="quiz_completed">Викторина завершена!</string>
    <string name="your_score">Ваш результат: %1$d/%2$d</string>
    <string name="congratulations">Поздравляем!</string>
    <string name="try_again">Пройти еще раз</string>
    <string name="back_to_quizzes">К списку викторин</string>
    <string name="time_remaining">Осталось времени: %1$d</string>
    <string name="add_quiz">Добавить викторину</string>
    <string name="edit_quiz">Редактировать викторину</string>
    <string name="create_quiz">Создать викторину</string>
    <string name="add_question">Добавить вопрос</string>
    <string name="add_answer">Добавить вариант ответа</string>
    <string name="correct_answer">Правильный ответ</string>
    <string name="incorrect_answer">Неправильный ответ</string>
    <string name="quiz">Викторина</string>
    <string name="quiz_title">Название викторины</string>
    <string name="quiz_description">Описание викторины</string>
    <string name="quiz_questions">Вопросы викторины</string>
    <string name="question_count">Вопросов: %1$d</string>
    <string name="edit_questions_after_save">Вы сможете добавить вопросы после сохранения викторины</string>
    <string name="quiz_results">Результаты викторины</string>
    <string name="quiz_created">Викторина успешно создана</string>
    <string name="quiz_updated">Викторина успешно обновлена</string>
    <string name="quiz_deleted">Викторина \"%1$s\" успешно удалена</string>
    <string name="error_delete_quiz">Ошибка при удалении викторины: %1$s</string>
    <string name="confirm_delete_quiz">Вы уверены, что хотите удалить викторину \"%1$s\"?</string>
    <string name="quiz_not_found">Викторина не найдена</string>
    <string name="error_loading_data">Ошибка загрузки данных: %1$s</string>
    <string name="error_select_entry">Выберите связанную статью</string>
    <string name="error_entry_not_found">Выбранная статья не найдена</string>
    <string name="more_actions">Дополнительные действия</string>
    <string name="back">Назад</string>
    <string name="bookmarks">Закладки</string>
    <string name="add_bookmark">Добавить в закладки</string>
    <string name="remove_bookmark">Удалить из закладок</string>
    <string name="bookmark_added">Добавлено в закладки</string>
    <string name="bookmark_removed">Удалено из закладок</string>
    <string name="no_bookmarks">Нет закладок</string>
    <string name="bookmark_hint">Используйте закладки, чтобы сохранять интересные статьи и иметь к ним быстрый доступ</string>
    <string name="bookmark">Закладка</string>
    <string name="comments">Комментарии</string>
    <string name="add_comment">Добавить комментарий</string>
    <string name="edit_comment">Изменить комментарий</string>
    <string name="delete_comment">Удалить комментарий</string>
    <string name="comment_hint">Напишите комментарий…</string>
    <string name="enter_comment">Введите комментарий</string>
    <string name="empty_comment_error">Комментарий не может быть пустым</string>
    <string name="comment_sent_success">Комментарий успешно отправлен</string>
    <string name="no_comments">Нет комментариев</string>
    <string name="be_first_to_comment">Будьте первым, кто оставит комментарий!</string>
    <string name="be_first_comment">Будьте первым, кто оставит комментарий к этой статье</string>
    <string name="user_avatar">Аватар пользователя</string>
    <string name="view_all_comments">Показать все комментарии</string>
    <string name="confirm_delete_comment_message">Вы уверены, что хотите удалить этот комментарий?</string>
    <string name="achievements">Достижения</string>
    <string name="achievement_unlocked">Достижение разблокировано!</string>
    <string name="achievement_progress">Прогресс: %1$d/%2$d</string>
    <string name="no_achievements">У вас пока нет достижений</string>
    <string name="locked_achievements">Заблокированные достижения</string>
    <string name="unlocked_achievements">Разблокированные достижения</string>
    <string name="achievement_hint">Выполняйте задания и читайте статьи, чтобы получать новые достижения</string>
    <string name="achievement_icon">Иконка достижения</string>
    <string name="achievement_completed">Достижение выполнено</string>
    <string name="achievement_completed_date">Получено: %1$s</string>
    <string name="achievement_points">+%1$d очков</string>
    <string name="xp_format">%1$d XP</string>
    <string name="total_achievements">Всего достижений: %1$d/%2$d</string>
    <string name="progress_format">%1$d/%2$d</string>
    <string name="achievements_all">ВСЕ</string>
    <string name="reading_achievements">ЧТЕНИЕ</string>
    <string name="quiz_achievements">ТЕСТЫ</string>
    <string name="social_achievements">СОЦИАЛЬНЫЕ</string>
    <string name="achievement_details_message">Детали достижения: %1$s</string>
    <string name="achievement_already_completed">Достижение \"%1$s\" уже выполнено!</string>
    <string name="achievement_just_completed">Поздравляем! Вы выполнили достижение \"%1$s\"!</string>
    <string name="achievement_progress_incremented">Прогресс достижения \"%1$s\": %2$d/%3$d (%4$d%%)</string>
    <string name="profile">Профиль</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="change_password">Изменить пароль</string>
    <string name="profile_picture">Фото профиля</string>
    <string name="admin_panel">Админ-панель</string>
    <string name="admin">Администратор</string>
    <string name="content_management">Управление контентом</string>
    <string name="user_management">Управление пользователями</string>
    <string name="tag_management">Управление тегами</string>
    <string name="analytics">Аналитика и статистика</string>
    <string name="manage_categories">Управление категориями</string>
    <string name="manage_entries">Управление статьями</string>
    <string name="user_details">Данные пользователя</string>
    <string name="assistant">AI-помощник</string>
</resources>