<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/categoriesFragment"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_categories" />
        <item
            android:id="@+id/bookmarksFragment"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/nav_bookmarks" />
        <item
            android:id="@+id/quizzesFragment"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/nav_quizzes" />
        <item
            android:id="@+id/achievementsFragment"
            android:icon="@android:drawable/btn_star"
            android:title="@string/nav_achievements" />
    </group>

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/profileFragment"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:title="@string/nav_profile" />
            <item
                android:id="@+id/settingsFragment"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/nav_settings" />
        </menu>
    </item>

    <item
        android:id="@+id/adminMenuItem"
        android:title="@string/admin">
        <menu>
            <item
                android:id="@+id/adminPanelFragment"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/admin_panel" />
        </menu>
    </item>

</menu> 